Adds in some package dependencies.

--- a/composer.json
+++ b/composer.json
@@ -15,10 +15,18 @@
             "role": "Developer"
         }
     ],
+    "repositories": [
+        {
+            "type": "composer",
+            "url": "https://nova.laravel.com"
+        }
+    ],
     "require": {
         "php": "^8.1",
-        "spatie/laravel-package-tools": "^1.14.0",
-        "illuminate/contracts": "^10.0"
+        "creode/laravel-account-approval": "^1.1",
+        "illuminate/contracts": "^10.0",
+        "laravel/nova": "^4.32",
+        "spatie/laravel-package-tools": "^1.14.0"
     },
     "require-dev": {
         "laravel/pint": "^1.0",
