--- a/composer.json
+++ b/composer.json
@@ -24,8 +24,8 @@
     "require": {
         "php": "^8.1",
         "creode/laravel-account-approval": "^1.1",
-        "illuminate/contracts": "^10.0 | ^11.0",
-        "laravel/nova": "^4.32",
+        "illuminate/contracts": "^10.0 | ^11.0 | ^12.0",
+        "laravel/nova": "^4.32 | ^5.0",
         "spatie/laravel-package-tools": "^1.14.0"
     },
     "require-dev": {
